--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -10,6 +10,14 @@
   <body>
 
     <%- include('partials/navigation')%>
-    <h1>About</h1>
+   
+    <main class="vh-100 container pt-2 text-center d-flex justify-content-center align-items-center">
+      <section>
+        <h1 class="display-1">About</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur, vel similique beatae expedita quae quisquam velit alias, dolores quasi distinctio dolore culpa reiciendis. Consectetur dolorum quod impedit distinctio atque hic. Porro modi error quisquam distinctio ullam nesciunt labore voluptas? Obcaecati nemo harum molestiae veritatis illo quam soluta tempore debitis voluptas, magnam ducimus deserunt ea beatae voluptates maiores in, maxime quo repellendus laboriosam nisi sint neque autem distinctio ratione! Sunt itaque officiis voluptates dicta exercitationem vero non molestias commodi fugiat harum quae cupiditate quaerat, esse vel voluptate aliquam hic, recusandae assumenda quisquam optio in. Assumenda dolorum nisi quis quidem obcaecati quisquam recusandae laborum totam! Aut, eligendi assumenda tenetur deleniti ipsam, perspiciatis reiciendis aspernatur minima, sunt omnis architecto ab consequuntur veritatis! Quibusdam illum, repellendus, laborum obcaecati eaque harum itaque, quos reprehenderit sed quae facere adipisci tempore. Unde repellat quibusdam ratione voluptatum soluta autem corrupti porro placeat. Nesciunt nobis distinctio natus ad cumque soluta asperiores temporibus, cupiditate atque sunt! Veritatis magnam minima fuga enim dicta nobis voluptas beatae reiciendis nesciunt cupiditate! Explicabo maiores quas at assumenda facere minima, quasi veritatis culpa neque ratione, dolore accusamus iure omnis. Alias optio vel et nostrum voluptatibus quod? Doloremque expedita odit modi fugiat dolorum inventore, provident nihil?</p>
+      </section>
+    </main>
+
+    <%- include('partials/footer')%>
   </body>
 </html>
