--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -10,6 +10,36 @@
   <body>
 
     <%- include('partials/navigation')%>
-    <h1>contact</h1>
+    
+    <div class="container vh-100 d-flex justify-content-center align-items-center">
+
+      <div class="card bg-dark textw-white text-center">
+        <div class="card-header">
+          <h3>Contact me</h3>
+        </div>
+        <div class="card-body text-start">
+          <form action="">
+
+            <div class="mb-3"> 
+              <label for="email">Email</label>
+              <input type="email" placeholder="Email" class="form-control">
+            </div>
+            
+            <div class="mb-3">
+              <label for="message">Message:</label>
+              <textarea name="message" rows="3" class="form-control" placeholder="Write a message"></textarea>
+            </div>
+            
+          
+            <button class="btn btn-primary btn-block">
+              Save
+            </button>
+          
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <%- include('partials/footer')%>
   </body>
 </html>
