--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,5 @@
-<footer>
-    <h1>Lorem, ipsum dolor.</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, quaerat. Commodi distinctio aperiam nisi id nemo harum repellat eaque laudantium?</p>
+<footer class="bg-dark text-center p-4">
+    <p class="h4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, sed!</p>    
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
