--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,8 +13,8 @@
 
     <header class="container vh-100 d-flex justify-content-center align-items-center">
         <div class="d-flex flex-column justify-content-center align-items-center">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/LEGO_logo.svg/2048px-LEGO_logo.svg.png" alt="" class="w-25 ">
-        <h1 class="display-1 my-5 text-uppercase fw-bold">Lego</h1>
+            <img src="https://1000marcas.net/wp-content/uploads/2019/12/meta-logo.png" alt="" class="w-25 ">
+        <h1 class="display-1 my-5 text-uppercase fw-bold">Meta</h1>
         <a href="/about" class="btn btn-primary w-25">About</a>
     </div>
     </header>
